[package]
name = "cashweb-auth-wrapper"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "authorization"]
description = "A library providing deserialization, parsing, and verification needed within the cash:web Authorization Wrapper Framework"
categories = ["development-tools"]

[dependencies]
ring = "0.16.19"
prost = "0.7.0"
thiserror = "1.0.23"

secp256k1 = { package = "cashweb-secp256k1", version = "0.20.0" }

[build-dependencies]
prost-build = "0.7.0"
