[package]
name = "cashweb-bitcoin-client"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "client"]
description = "A minimal Bitcoin RPC client."
categories = ["development-tools"]

[dependencies]
hex = "0.4.2"
hyper = { version = "0.14.1", features = ["stream", "client", "http2", "tcp"] }
# hyper-tls = "0.4.3"
json-rpc = { package = "async-json-rpc", git = "https://github.com/hlb8122/async-json-rpc.git", branch = "bump-to-tokio-1.0" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
thiserror = "1.0.23"
tower-service = "0.3.0"
