[package]
name = "cashweb-bitcoin"
version = "0.1.0-alpha.2"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin"]
description = "A library providing serialization/deserialization of Bitcoin structures, utility methods for signing, and methods for Hierarchical Deterministic Wallets use."
categories = ["development-tools"]

[dependencies]
bytes = "0.5.6"
ring = "0.16.15"
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "1.0.20"

secp256k1 = { package = "cashweb-secp256k1", version = "0.17.3" }

[dev-dependencies]
hex = "0.4.2"
criterion = "0.3.3"
rand = "0.7.3"
secp256k1 = { package = "cashweb-secp256k1", version = "0.17.3", features = ["rand"] }

[[bench]]
name = "transaction"
harness = false
