[package]
name = "cashweb-bitcoin"
version = "0.1.0-alpha.3"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin"]
description = "A library providing serialization/deserialization of Bitcoin structures, utility methods for signing, and methods for Hierarchical Deterministic Wallets use."
categories = ["development-tools"]

[dependencies]
bytes = "1.0.0"
ring = "0.16.19"
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.23"

secp256k1 = { package = "cashweb-secp256k1", version = "0.20.0" }

[dev-dependencies]
hex = "0.4.2"
criterion = "0.3.3"
rand = "0.8.0"

secp256k1 = { package = "cashweb-secp256k1", version = "0.20.0", features = ["rand"] }

[[bench]]
name = "transaction"
harness = false
