[package]
name = "cashweb-bitcoin"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin"]
description = "A library providing serialization/deserialization of Bitcoin structures, utility methods for signing, and methods for Hierarchical Deterministic Wallets use."
categories = ["development-tools"]

[dependencies]
bytes = "1"
ring = "0.16"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

secp256k1 = { package = "cashweb-secp256k1", version = "0.19" }

[dev-dependencies]
hex = "0.4"
criterion = "0.3"
rand = "0.8"

secp256k1 = { package = "cashweb-secp256k1", version = "0.19", features = ["rand"] }

[[bench]]
name = "transaction"
harness = false
