[package]
name = "cashweb-broadcast"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
async-json-rpc = { git = "https://github.com/hlb8122/async-json-rpc" }
hex = "0.4.0"
hyper = "0.13.0"
futures-core = "0.3.1"
futures-util = "0.3.1"
tower-service = "0.3.0"
