[package]
name = "cashweb-keyserver-client"
version = "0.1.0-alpha.1"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "keyserver", "client"]
description = "A library providing a client for use within the cash:web Keyserver Protocol."
categories = ["development-tools"]

[dependencies]
bytes = "0.5.6"
futures-core = "0.3.5"
futures-util = "0.3.5"
hyper = { version = "0.13.7", features = ["stream"] }
hyper-tls = "0.4.3"
rand = "0.7.3"
thiserror = "1.0.20"
tokio = { version = "0.2.21", features = ["sync"] }
tower-service = "0.3.0"
tower-util = "0.3.1"
prost = "0.6.1"

auth-wrapper = { version = "0.1.0-alpha.1", package = "cashweb-auth-wrapper", path = "../cashweb-auth-wrapper" }
keyserver = { version = "0.1.0-alpha.1", package = "cashweb-keyserver", path = "../cashweb-keyserver" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.17.3" }
