[package]
name = "cashweb-keyserver-client"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "keyserver", "client"]
description = "A library providing a client for use within the cash:web Keyserver Protocol."
categories = ["development-tools"]

[dependencies]
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
hyper-tls = "0.5"
rand = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tower-service = "0.3"
tower-util = "0.3"
prost = "0.7"

auth-wrapper = { version = "0.1.0-alpha.4", package = "cashweb-auth-wrapper", path = "../cashweb-auth-wrapper" }
keyserver = { version = "0.1.0-alpha.4", package = "cashweb-keyserver", path = "../cashweb-keyserver" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.19" }
