[package]
name = "cashweb-keyserver"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "keyserver"]
description = "A library providing protobuf structures within the cash:web Keyserver Protocol."
categories = ["development-tools"]

[dependencies]
prost = "0.7"
thiserror = "1"

[build-dependencies]
prost-build = "0.7"
