[package]
name = "cashweb-payments"
version = "0.1.0-alpha.2"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "payments"]
description = "A helper library for cash:web payments."
categories = ["development-tools"]

[dependencies]
bytes = "0.5.6"
dashmap = "3.11.9"
http = "0.2.1"
hyper = "0.13.7"
prost = "0.6.1"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["time"] }

[build-dependencies]
prost-build = "0.6.1"
