[package]
name = "cashweb-payments"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "payments"]
description = "A helper library for cash:web payments."
categories = ["development-tools"]

[dependencies]
bytes = "1.0.0"
dashmap = "4.0.1"
http = "0.2.2"
hyper = "0.14.1"
prost = { git = "https://github.com/danburkert/prost.git" }
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["time"] }

[build-dependencies]
prost-build = { git = "https://github.com/danburkert/prost.git" }
