[package]
name = "cashweb-protection"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
http = "0.2.0"
futures-core = "0.3.1"
futures-util = "0.3.1"
tower-service = "0.3.0"
tower-layer = "0.3.0"

token = { package = "cashweb-token", path = "../cashweb-token" }
