[package]
name = "cashweb-protobuf"
version = "0.1.0-alpha.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "protobuffers", "protobuf"]
description = "A helper library for the cash:web protobuf messages."
categories = ["development-tools"]

[dependencies]
prost = "0.6.1"
bytes = "0.5.4"

[build-dependencies]
prost-build = "0.6.1"
