[package]
name = "cashweb-relay-client"
version = "0.1.0-alpha.2"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "relay", "client"]
description = "A library providing a client for use within the cash:web Relay Protocol"
categories = ["development-tools"]

[dependencies]
futures-core = "0.3.5"
futures-util = "0.3.5"
http = "0.2.1"
hyper = { version = "0.13.7", features = ["stream"] }
rand = "0.7.3"
thiserror = "1.0.20"
tower-service = "0.3.0"
tower-util = "0.3.1"
prost = "0.6.1"

auth-wrapper = { version = "0.1.0-alpha.1", package = "cashweb-auth-wrapper", path = "../cashweb-auth-wrapper" }
relay = { version = "0.1.0-alpha.1", package = "cashweb-relay", path = "../cashweb-relay" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.17.3" }
