[package]
name = "cashweb-relay-client"
version = "0.1.0-alpha.3"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "relay", "client"]
description = "A library providing a client for use within the cash:web Relay Protocol"
categories = ["development-tools"]

[dependencies]
futures-core = "0.3.8"
futures-util = "0.3.8"
http = "0.2.2"
hyper = { version = "0.14.1", features = ["stream"] }
rand = "0.8.0"
thiserror = "1.0.23"
tower-service = "0.3.0"
tower-util = "0.3.1"
prost = { git = "https://github.com/danburkert/prost.git" }

auth-wrapper = { version = "0.1.0-alpha.3", package = "cashweb-auth-wrapper", path = "../cashweb-auth-wrapper" }
relay = { version = "0.1.0-alpha.3", package = "cashweb-relay", path = "../cashweb-relay" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.17.3" }
