[package]
name = "cashweb-relay-client"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "relay", "client"]
description = "A library providing a client for use within the cash:web Relay Protocol"
categories = ["development-tools"]

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "tcp", "stream"] }
rand = "0.8"
thiserror = "1"
tower-service = "0.3"
tower-util = "0.3"
prost = "0.7"

auth-wrapper = { version = "0.1.0-alpha.4", package = "cashweb-auth-wrapper", path = "../cashweb-auth-wrapper" }
relay = { version = "0.1.0-alpha.4", package = "cashweb-relay", path = "../cashweb-relay" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.19" }
