[package]
name = "cashweb-relay"
version = "0.1.0-alpha.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
aes = "0.4.0"
block-modes = "0.5.0"
ring = "0.16.15"
ripemd160 = "0.9.1"
prost = "0.6.1"

bitcoin = { version = "0.1.0-alpha.0", package = "cashweb-bitcoin", path = "../cashweb-bitcoin" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.17.3" }

[build-dependencies]
prost-build = "0.6.1"
