[package]
name = "cashweb-relay"
version = "0.1.0-alpha.4"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "relay"]
description = "`cashweb-relay` is a library providing serialization/deserialization, encryption/decryption/verification of structures in the Relay Protocol."
categories = ["development-tools"]

[dependencies]
aes = "0.6"
block-modes = "0.7"
ring = "0.16"
ripemd160 = "0.9"
thiserror = "1"
prost = "0.7"

bitcoin = { version = "0.1.0-alpha.4", package = "cashweb-bitcoin", path = "../cashweb-bitcoin" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.19" }

[build-dependencies]
prost-build = "0.7"
