[package]
name = "cashweb-stamp"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
bitcoin = { version = "0.1.0-alpha.0", package = "cashweb-bitcoin", path = "../cashweb-bitcoin" }

secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "a5147bbf015ca61bb0e4e09adb8e9b324965c291" }
ring = "0.16.14"
ripemd160 = "0.9.0"
prost = "0.6.1"

[build-dependencies]
prost-build = "0.6.1"
