[package]
name = "cashweb-token"
version = "0.1.0-alpha.7"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "token"]
description = "A protobuf library for the cash:web tokens."
categories = ["development-tools"]

[dependencies]
base64 = "0.13.0"
http = "0.2.1"
hyper = { version = "0.13.8", features = ["stream"] }
hyper-tls = "0.4.3"
ring = "0.16.15"
thiserror = "1.0.21"
tower-service = "0.3.0"

bitcoin = { version = "0.1.0-alpha.3", package = "cashweb-bitcoin", path = "../cashweb-bitcoin" }
bitcoin-client = { version = "0.1.0-alpha.4", package = "cashweb-bitcoin-client", path = "../cashweb-bitcoin-client" }
