[package]
name = "cashweb-token"
version = "0.1.0-alpha.9"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin", "token"]
description = "A protobuf library for the cash:web tokens."
categories = ["development-tools"]

[dependencies]
base64 = "0.13"
http = "0.2"
hyper = { version = "0.14", features = ["stream"] }
hyper-tls = "0.5"
ring = "0.16"
thiserror = "1"
tower-service = "0.3"

bitcoin = { version = "0.1.0-alpha.4", package = "cashweb-bitcoin", path = "../cashweb-bitcoin" }
bitcoin-client = { version = "0.1.0-alpha.5", package = "cashweb-bitcoin-client", path = "../cashweb-bitcoin-client" }
