[package]
name = "cashweb"
version = "0.1.0-alpha.2"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin"]
description = "A collection of useful cash:web helper libraries."
categories = ["development-tools"]

[dependencies]
bitcoin-client = { version = "0.1.0-alpha.0", package = "cashweb-bitcoin-client", path = "../cashweb-bitcoin-client" }
payments = { version = "0.1.0-alpha.0", package = "cashweb-payments", path = "../cashweb-payments" }
protobuf = { version = "0.1.0-alpha.0", package = "cashweb-protobuf", path = "../cashweb-protobuf" }
token = { version = "0.1.0-alpha.2", package = "cashweb-token", path = "../cashweb-token" }
