[package]
name = "cashweb"
version = "0.1.0-alpha.3"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin"]
description = "A collection of useful cash:web helper libraries."
categories = ["development-tools"]

[dependencies]
auth-wrapper = { version = "0.1.0-alpha.0", package = "cashweb-auth-wrapper", path = "../cashweb-auth-wrapper" }
bitcoin = { version = "0.1.0-alpha.0", package = "cashweb-bitcoin", path = "../cashweb-bitcoin" }
bitcoin-client = { version = "0.1.0-alpha.0", package = "cashweb-bitcoin-client", path = "../cashweb-bitcoin-client" }
payments = { version = "0.1.0-alpha.0", package = "cashweb-payments", path = "../cashweb-payments" }
relay = { version = "0.1.0-alpha.0", package = "cashweb-relay", path = "../cashweb-relay" }
token = { version = "0.1.0-alpha.2", package = "cashweb-token", path = "../cashweb-token" }
