[package]
name = "cashweb"
version = "0.1.0-alpha.10"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cashweb/cashweb-rs"
repository = "https://github.com/cashweb/cashweb-rs"
keywords = ["cashweb", "bitcoin"]
description = "A collection of useful cash:web helper libraries."
categories = ["development-tools"]

[dependencies]
auth-wrapper = { version = "0.1.0-alpha.5", package = "cashweb-auth-wrapper", path = "../cashweb-auth-wrapper" }
bitcoin = { version = "0.1.0-alpha.4", package = "cashweb-bitcoin", path = "../cashweb-bitcoin" }
bitcoin-client = { version = "0.1.0-alpha.5", package = "cashweb-bitcoin-client", path = "../cashweb-bitcoin-client" }
keyserver = { version = "0.1.0-alpha.4", package = "cashweb-keyserver", path = "../cashweb-keyserver" }
keyserver-client = { version = "0.1.0-alpha.4", package = "cashweb-keyserver-client", path = "../cashweb-keyserver-client" }
payments = { version = "0.1.0-alpha.5", package = "cashweb-payments", path = "../cashweb-payments" }
relay = { version = "0.1.0-alpha.4", package = "cashweb-relay", path = "../cashweb-relay" }
relay-client = { version = "0.1.0-alpha.4", package = "cashweb-relay-client", path = "../cashweb-relay-client" }
secp256k1 = { package = "cashweb-secp256k1", version = "0.19" }
token = { version = "0.1.0-alpha.9", package = "cashweb-token", path = "../cashweb-token" }
